--- a/np-users-backend-80.yml
+++ b/np-users-backend-80.yml
@@ -12,3 +12,6 @@ spec:
     - namespaceSelector:
         matchLabels:
           app: users-backend
+    ports:
+    - protocol: TCP
+      port: 80
