--- a/logging-sidecar.yml
+++ b/logging-sidecar.yml
@@ -1,4 +1,4 @@
-apiversion: v1
+apiVersion: v1
 kind: Pod
 metadata:
   name: logging-sidecar
@@ -10,13 +10,13 @@ spec:
     command: ['sh', '-c', 'while true; do echo Logging data > /output/output.log; sleep 5; done']
     volumeMounts:
     - name: sharedvol
-    mountPath: /output
+      mountPath: /output
   - name: sidecar
     image: busybox
     command: ['sh', '-c', 'tail -f /input/output.log']
     volumeMounts:
     - name: sharedvol
-    mountPath: /input
+      mountPath: /input
   volumes:
   - name: sharedvol
-  emptyDir: {}
+    emptyDir: {}
